--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,6 @@
 name: CI for FastAPI Todo App
 
-on
+on:
   push:
     branches:
       - main
@@ -16,7 +16,7 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
 
-    - name: Setup Python
+    - name: Set up Python
       uses: actions/setup-python@v5
       with:
         python-version: '3.10'
@@ -32,5 +32,5 @@ jobs:
 
     - name: Run tests
       run: |
-        # You can add test commands here; example uses pytest
-        pytest || echo "No tests found or pytest returned non-zero code"
+        pytest || echo "No tests found or pytest failed"
+
